# chat-reader

./: .dockerignore  .env.example  .env.production.example  .gitignore  MANIFEST.md  Makefile  PROJECT_STATE.md  README.md  ZIP_SHA256.txt  design.md  docker-compose.production.yml  docker-compose.yml  package.json  pnpm-lock.yaml  requirements.md  tasks.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/tests/: test_canonical_persistence_combo.py  test_canonical_persistence_exporter.py  test_canonical_persistence_official.py  test_conversation_management_api.py  test_conversation_read_api.py  test_cr_archive.py  test_edit_reindex_integration.py  test_error_handling_contract.py  test_export_api.py  test_exporter_aligner.py  test_exporter_json_parser.py  test_exporter_markdown_parser.py  test_full_flow_regression.py  test_health.py  test_import_preview_api.py  test_import_preview_exporter_combo.py  test_import_preview_official.py  test_import_queue.py  test_large_fixture_performance.py  test_message_editing_api.py  test_message_version_history_api.py  test_migration_integrity.py  test_official_json_parser.py  test_official_normalizer.py  test_official_primary_path.py  test_official_samples.py  test_offline_annotations_api.py  test_pinning_api.py  test_preferences_api.py  test_projects_api.py  test_reader_api_contract.py  test_reader_performance_api.py  test_reading_positions_api.py  test_recent_items_api.py  test_render_block_builder.py  test_search_api.py  test_search_indexer.py  (+7 more)
(+253 files in other folders)
