[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-reader-api"
version = "0.0.0"
description = "FastAPI foundation service for chat-reader"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.14,<2.0",
  "pydantic-settings>=2.7,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pytest>=8.3,<9.0",
  "httpx>=0.27,<1.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
